# scripts

./: any_health_check.py  gamecube real mapping.txt  gamecube.py  gamecube_health_check  ps4.py
bbhunt/: DOCS.md  README.md  bbhunt.py  docker-compose.yml  requirements.txt
bbhunt/core/: cli.py  config.py  plugin.py  resources.py
bbhunt/docker/: Dockerfile
bbhunt/plugins/exploit/: ssrf_verify.py  xss_verify.py
bbhunt/plugins/recon/: content_discovery.py  subdomain_enum.py
bbhunt/plugins/scan/: web_scan.py
bbhunt/rust/: Cargo.toml  DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml
bbhunt/rust/src/: main.rs  mod.rs  plugin.rs
bbhunt/rust/src/core/: cli.rs  config.rs  resource_manager.rs
bbhunt/rust/src/plugins/: mod.rs
bbhunt/rust/src/plugins/recon/: subdomain_enum.rs
bbhunt/rust/src/plugins/scan/: web_scan.rs
bbhunt/rust/src/utils/: http.rs
ps4/: ps4.py  ps4_diagnostic.py  ps4_w10.py  requirements.txt  test.py
rust/old/old/: linux.rs  mod.rs  types.rs  win_xinput.rs
rust/ps4_midi_mapper/: Cargo.toml  README.md  build.rs
rust/ps4_midi_mapper/src/: config.rs  driver_setup.rs  lib.rs  main.rs  mapper.rs  midi_output.rs
rust/ps4_midi_mapper/src/controller/: directinput.rs  mod.rs  profiles.rs  types.rs  windows.rs
rust/ps4_midi_mapper/src/controller/linux/: dualshock.rs  mod.rs
rust/ps4_midi_mapper/src/controller/windows/: direct_input.rs  hid.rs  mod.rs  rawio.rs  xinput.rs
rust/ps4_midi_mapper/src/controllers/: mod.rs
rust/ps4_midi_mapper/src/controllers/linux/: dualshock.rs  mod.rs
rust/ps4_midi_mapper/src/controllers/windows/: direct_input.rs  mod.rs  xinput.rs
rust/ps4_midi_mapper/src/device_registry/: controller.rs  metadata.rs  mod.rs  registry.rs
rust/ps4_midi_mapper/src/midi/: mod.rs  sender.rs
rust/ps4_midi_mapper/src/platform/: linux.rs  mod.rs  windows.rs
rust/ps4_midi_mapper/tests/: hid_diagnostics.rs
