[package]
name = "bbhunt"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modular bug bounty hunting framework"
license = "MIT"

[dependencies]
# Core dependencies
tokio = { version = "1.35.0", features = ["full"] }
async-trait = "0.1.77"
anyhow = "1.0.79"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# CLI
clap = { version = "4.4.18", features = ["derive"] }
dialoguer = "0.11.0"

# HTTP and Networking
reqwest = { version = "0.11.23", features = ["json", "native-tls"] }
url = "2.5.0"

# Configuration and Serialization 
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
config = "0.13.4"

# System Interaction
nix = { version = "0.27.1", optional = true }
sysinfo = "0.30.5"

# Async Runtime and Concurrency
futures = "0.3.30"
rayon = "1.9.0"

# Regex and Parsing
regex = "1.10.3"

# Optional Features
[features]
default = []
docker = ["nix"]
telemetry = []

[dev-dependencies]
mockall = "0.12.1"
