[package]
name = "ps4_midi_mapper"
version = "0.1.0"
edition = "2021"

# Make sure hidapi is included for HID access
[dependencies]
hidapi = "2.6.3"
rusty-xinput = "1.3.0"
midir = "0.10.1"
log = "0.4.20"

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
] }

# Linux support
[target.'cfg(target_os = "linux")'.dependencies]
gilrs = { version = "0.9", features = ["serde"] }
evdev = "0.12"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
serial_test = "0.6.0"  # Optional: For serial test execution