[package]
name = "ps4_midi_mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
hidapi = "2.6.3"
midir = "0.10.1"
log = "0.4.20"
rusty-xinput = "1.3.0"

# Windows dependencies with minimal required features
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54.0", features = [
    "Win32_Foundation",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_IO",
    "implement"
] }

# Linux support
[target.'cfg(target_os = "linux")'.dependencies]
gilrs = { version = "0.9", features = ["serde"] }
evdev = "0.12"

[build-dependencies]
winres = "0.1"

[dev-dependencies]
serial_test = "0.6.0"  # Optional: For serial test execution